--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,5 @@
+version: 2
+
 linters:
   enable:
     - errcheck
@@ -9,9 +11,11 @@ linters:
     - unused
     - gofmt
     - goimports
+    - revive
+    - misspell
+  disable:
     - golint
     - gosec
-    - misspell
 
 run:
   timeout: 5m
